    * [FELIX-3757] - If an AttributeDefinition did not specify a minimum, maximum or option values, it did not detect missing values;
    * [FELIX-3758] - AttributeDefinition.validate() did not take non-zero cardinality into consideration.
    * [FELIX-4214] - Cache in BundleResources works only for a single metatype properties file per bundle


Changes from 1.0.4 to 1.0.6
---------------------------

** Bug
    * [FELIX-2094] - AttributeDefinition with an empty default value must attribute must result in a single (empty string) entry string array
    * [FELIX-2097] - DefaultMetaTypeProvider.getLocales() must not reuturn an empty string entry
    * [FELIX-2860] - getLocales() in DefaultMetaTypeProvider needs to check return of findEntries
    * [FELIX-2867] - getIcon() in LocalizedObjectClassDefinition keyset iteration incorrect
    * [FELIX-2868] - Icon only works if absolute path specified, but specification allows for relative urls
    * [FELIX-3183] - Attribute requirement is not validated
    * [FELIX-3364] - MetaDataReader exposes a private exception class on the public API
    * [FELIX-3720] - Designate's pid attribute is optional and not mandatory
    * [FELIX-3730] - AD.validate of string attributes must validate the string length
    * [FELIX-3732] - service.pid properties of ManagedServiceFactory services must be used as factory PIDs
    * [FELIX-3734] - MetaType: NPE in ServiceTracker for fragment bundle

** Improvement
    * [FELIX-3167] - Add support for new PASSWORD attribute type
    * [FELIX-3338] - Add support for optional attributes in the MetaDataReader as defined in the XML schema for metatype
    * [FELIX-3736] - Add support for MetaTypeProvider service modifications
    * [FELIX-3740] - Maintain the MetaTypeProvider service tracker on the MetaTypeService

** New Feature
    * [FELIX-2719] - Add name space support to the meta type implementation

** Task